- updated ac6 - updated example files for broadcast compatibility

--- a/.cproject
+++ b/.cproject
@@ -67,6 +67,9 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.1834967032.1672395808" name="Battery_config - single_broadcast.c" rcbsApplicability="disable" resourcePath="src/Battery_config - single_broadcast.c" toolsToInvoke="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.2070400391.1829894234">
+						<tool id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.2070400391.1829894234" name="MCU GCC Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.2070400391"/>
+					</fileInfo>
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="CMSIS"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="StdPeriph_Driver"/>
@@ -138,6 +141,10 @@
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1771943651" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.assembler.input.739311735" superClass="fr.ac6.managedbuild.tool.gnu.cross.assembler.input"/>
+							</tool>
+							<tool id="fr.ac6.managedbuild.tool.gnu.cross.assembler.exe.release.1468095642" name="MCU GCC Assembler" superClass="fr.ac6.managedbuild.tool.gnu.cross.assembler.exe.release">
+								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1495789682" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
+								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.assembler.input.406871750" superClass="fr.ac6.managedbuild.tool.gnu.cross.assembler.input"/>
 							</tool>
 						</toolChain>
 					</folderInfo>
